--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ li span {
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Workik
+    Workij
   </div>
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top w3-center" id="container">COMING SOON</h1>
