--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="icon" type="image/x-icon" href="assets/img/favicon-32x32.png">
 <style>
+
+* { margin: 0; padding: 0; }
+
+html { 
+	background: url('https://www.w3schools.com/w3images/forestbridge.jpg') no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
+
 .bgimg {
-  background-image: url('https://www.w3schools.com/w3images/forestbridge.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
@@ -26,7 +37,6 @@ body, html {height: 100%}
 
 li {
     display: inline-block;
-    font-size: 1.5em;
     list-style: none;
     padding: 1em;
     text-transform: uppercase;
@@ -34,7 +44,6 @@ li {
 
 li span {
   display: block;
-  font-size: 4.5rem;
 }
 </style>
 </head>
@@ -45,7 +54,7 @@ li span {
     Workij
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top w3-center" id="container">COMING SOON</h1>
+    <h1 class="w3-jumbo w3-animate-top" id="container">COMING SOON</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
 	<div id="countdown" class="w3-center">
         <ul>
