fix: moving txt

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@ li span {
     <hr class="w3-border-grey" style="margin:auto;width:40%">
 	<div id="countdown" class="w3-center">
         <ul>
-          <li><span class="days"></span>days</li>
-          <li><span class="hours"></span>Hours</li>
-          <li><span class="minutes"></span>Minutes</li>
-          <li><span class="seconds"></span>Seconds</li>
+          <li><span class="days">00</span>days</li>
+          <li><span class="hours">00</span>Hours</li>
+          <li><span class="minutes">00</span>Minutes</li>
+          <li><span class="seconds">00</span>Seconds</li>
         </ul>
     </div>
   </div>
