add powered by msg

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@ li span {
         </ul>
     </div>
   </div>
+  <div class="w3-display-bottomleft w3-padding-large">
+	Powered by S. Digital
+  </div>
 </div>
 
 <script charset="utf-8">
